Revert "Fix downloads section: add bottom padding to list for consistent last-item spacing"
This reverts commit f67dca1ff2161dcdd154362b450aae1b574d92da.

--- a/style.css
+++ b/style.css
@@ -2846,7 +2846,6 @@ Tags: custom-logo, custom-menu, featured-images, translation-ready, acf, flexibl
   max-width: 69.625rem;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 1.875rem;
 }
 .downloads-section__header + .downloads-section__list {
   max-width: 100%;
